# imperium-backend

./: .gitignore  AGENTS.md  ARCHITECTURE_DIGEST_2.md  SOCLE_MAPPING.md  docker-compose.imperium.yml
audits/: INDEX.md  (+11 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/audits/: 2026-05-23_1406_audit.md  2026-05-25_0514_audit.md  2026-05-25_0519_audit.md  2026-05-25_0903_audit.md  2026-05-25_1404_audit.md  2026-05-25_1408_audit.md  2026-05-25_1519_audit.md  2026-05-25_1626_audit.md  2026-05-25_1907_audit.md  2026-05-25_1910_audit.md  2026-05-27_1018_audit.md  2026-05-27_1026_audit.md  2026-05-27_1059_audit.md  2026-05-27_1333_audit.md  2026-05-27_1414_audit.md  2026-05-27_1508_audit.md  2026-05-27_1511_audit.md  2026-05-27_2044_audit.md  2026-05-27_2128_audit.md  2026-05-28_0809_audit.md  2026-05-28_1417_audit.md  2026-05-28_2041_audit.md  2026-05-29_0429_audit.md  2026-05-29_0638_audit.md  2026-05-29_1316_audit.md  2026-05-29_1326_audit.md  2026-05-29_1447_audit.md  2026-05-29_1527_audit.md  2026-05-29_1642_audit.md  2026-05-29_1746_audit.md  2026-05-29_1755_audit.md  2026-05-29_2045_audit.md  2026-05-30_0615_audit.md  2026-05-30_1611_audit.md  2026-05-30_1758_audit.md  2026-05-30_1859_audit.md  2026-05-31_1106_audit.md  2026-06-02_0108_audit.md  2026-06-02_0503_audit.md  2026-06-02_0519_audit.md  (+15 more)
backend/docs_master/: 01_SIGNAL_VARIABLES_DICTIONARY.md  26_PRIORITY_RULES_WORKFLOW.md  27_VAULT_TRANSACTIONS_WORKFLOW.md  29_WEEKLY_REPORT_WORKFLOW.md  (+14 more)
(+487 files in other folders)
