[build-system]
requires = ["setuptools==69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ai-os-backend"
version = "0.1.0"
description = "Backend V1 skeleton for the personal AI operating system."
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "argon2-cffi==23.1.0",
    "fastapi==0.115.6",
    "psycopg[binary]==3.2.13",
    "pydantic-settings==2.7.1",
    "python-jose[cryptography]==3.3.0",
    "SQLAlchemy==2.0.49",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
